# Feature-Detection-Lab

./: CMakeLists.txt  CMakeSettings.json  README  README.md
main/: tracking.cpp  trackingF.cpp  trackingF_KNN.cpp
